# esme-posttrain

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
configs/: esme-214m-chat-dpo.json  esme-214m-instruct.json  esme-214m-rl-placebo-seed215.json  esme-214m-rl-placebo-seed216.json  esme-214m-rl-placebo-seed217.json  esme-214m-rl-placebo-seed218.json  esme-214m-rl-placebo-seed219.json  esme-214m-rl-placebo.json  esme-214m-rl-seed215.json  esme-214m-rl-seed216.json  esme-214m-rl-seed217.json  esme-214m-rl-seed218.json  esme-214m-rl-seed219.json  esme-214m-rl.json  esme-214m-sft-multiturn.json
data/manifests/: esme-214m-rl-heldout.tasks.json  esme-214m-rl.tasks.json
docs/: architecture.md  package-layout.md  rlvr-countdown-3number-tokenbudget.md  rlvr-countdown-heldout-transfer.md  rlvr-countdown-lite-grpo.md  rlvr-countdown-lite.md  study-reports.md
docs/internal/: instruct-sft-recipe.md  operator-routing.md  repo-study-notes.md  rlvr-countdown-lite-grpo-run.md  (+9 more)
run_cards/: esme-214m-chat-dpo.md  esme-214m-full-path-gpu-acceptance.md  esme-214m-instruct.md  esme-214m-rl.md  esme-214m-sft-multiturn-resample.md  esme-214m-sft-multiturn.md
schemas/: instruct-sft-config.schema.json  rl-task-manifest.schema.json  rlvr-grpo-config.schema.json  single-turn-instruction-manifest.schema.json
scripts/: modal_chat_dpo.py  modal_chat_sft.py  modal_instruct_sft.py  modal_rlvr_grpo.py  plot_run_telemetry.py
studies/: rlvr-placebo.json  rlvr-placebo.report.json  rlvr-placebo.report.md
tests/: test_artifact_cli.py  test_artifact_contract.py  test_chat_dpo.py  test_countdown_golden.py  test_countdown_heldout.py  test_countdown_lite.py  test_dpo_data.py  test_eval_records.py  test_export_dense_bundle.py  test_full_path_smoke.py  test_launch_cap_enforcement.py  test_launch_common.py  test_launch_config_guards.py  test_rlvr_decomp.py  test_rlvr_grpo.py  test_rlvr_grpo_stability.py  test_rlvr_launch.py  test_scaffold.py  test_sft_data_single_turn.py  test_sft_multiturn.py  test_sft_pilot.py  test_sft_trainer.py  test_study_report.py  test_training_checkpointing.py  test_training_runtime.py
(+118 files in other folders)
