[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esme-posttrain"
version = "0.0.0"
description = "Post-training: SFT -> DPO -> RLVR for Esme-214M."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Adam Thuvesen" }]
dependencies = [
    "datasets>=5.0.0",
    "modal>=1.5.1",
    "numpy>=2.4.6",
    "pydantic>=2.12",
    "tokenizers>=0.23.1",
    "torch>=2.12.1",
    "wandb>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=2.2.0",
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
esme-posttrain = "esme_posttrain.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
files = ["src/esme_posttrain"]
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.hatch.build.targets.wheel]
packages = ["src/esme_posttrain"]
